--- a/src/resource/views/partials/header.hbs
+++ b/src/resource/views/partials/header.hbs
@@ -1,38 +1,44 @@
 <nav class='navbar navbar-expand-lg navbar-dark bg-dark'>
-  <a class='navbar-brand' href='#'>Education</a>
-  <button
-    class='navbar-toggler'
-    type='button'
-    data-toggle='collapse'
-    data-target='#navbarSupportedContent'
-    aria-controls='navbarSupportedContent'
-    aria-expanded='false'
-    aria-label='Toggle navigation'
-  >
-    <span class='navbar-toggler-icon'></span>
-  </button>
+  <div class='container'>
+    <a class='navbar-brand' href='#'>Education</a>
+    <button
+      class='navbar-toggler'
+      type='button'
+      data-toggle='collapse'
+      data-target='#navbarSupportedContent'
+      aria-controls='navbarSupportedContent'
+      aria-expanded='false'
+      aria-label='Toggle navigation'
+    >
+      <span class='navbar-toggler-icon'></span>
+    </button>
 
-  <div class='collapse navbar-collapse' id='navbarSupportedContent'>
-    <ul class='navbar-nav mr-auto'>
-      <li class='nav-item active'>
-        <a class='nav-link' href='#'>Home
-          <span class='sr-only'>(current)</span></a>
-      </li>
-      <li class='nav-item'>
-        <a class='nav-link' href='#'>Link</a>
-      </li>
-    </ul>
-    <form class='form-inline my-2 my-lg-0'>
-      <input
-        class='form-control mr-sm-2'
-        type='search'
-        placeholder='Search'
-        aria-label='Search'
-      />
-      <button
-        class='btn btn-outline-success my-2 my-sm-0'
-        type='submit'
-      >Search</button>
-    </form>
+    <div class='collapse navbar-collapse' id='navbarSupportedContent'>
+      <ul class='navbar-nav mr-auto'>
+        <li class='dropdown'>
+          <button
+            class='btn btn-secondary dropdown-toggle'
+            type='button'
+            id='dropdownMenuButton'
+            data-toggle='dropdown'
+            aria-haspopup='true'
+            aria-expanded='false'
+          >
+            <img
+              src='https://files.fullstack.edu.vn/f8-prod/user_photos/385971/65b1c86f4dcaf.jpg'
+              alt='avatar'
+              class='user-avatar'
+            />
+            Quang Thai
+          </button>
+          <div class='dropdown-menu' aria-labelledby='dropdownMenuButton'>
+            <a class='dropdown-item' href='/courses/create'>Đăng ký khoá học</a>
+            <a class='dropdown-item' href='/me/stored/courses'>Khoá học của tôi</a>
+            <a class='dropdown-item' href='/me/stored/news'>Bài đăng của tôi</a>
+            <a class='dropdown-item' href='#'>Đăng xuất</a>
+          </div>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
