--- a/src/resource/views/me/trash-courses.hbs
+++ b/src/resource/views/me/trash-courses.hbs
@@ -1,7 +1,7 @@
 <div class='mt-4'>
   <div>
-    <h2>Khoá học của tôi</h2>
-    <a href='/me/trash/courses'>Thùng rác ({{deletedCount}})</a>
+    <h2>Khoá học đã xoá</h2>
+    <a href='/me/stored/courses'>Quay lại</a>
   </div>
   <table class='table mt-4 border'>
     <thead>
@@ -10,7 +10,7 @@
         <th scope='col'>Hình ảnh khoá học</th>
         <th scope='col'>Tên khoá học</th>
         <th scope='col'>Slug</th>
-        <th scope='col'>Thời gian tạo</th>
+        <th scope='col'>Thời gian xoá</th>
         <th scope='col'>Hành động</th>
       </tr>
     </thead>
@@ -25,22 +25,21 @@
             /></td>
           <td>{{this.name}}</td>
           <td>{{this.slug}}</td>
-          <td>{{this.createdAt}}</td>
+          <td>{{this.deletedAt}}</td>
           <td>
-            <a href='/courses/{{this._id}}/edit'>Sửa</a>
+            <a href='' class='btn-restore' data-id='{{this._id}}'>Khôi phục</a>
             <a
               href=''
               data-toggle='modal'
               data-id='{{this._id}}'
               data-target='#delete-course-modal'
-            >Xoá</a>
+            >Xoá vĩnh viễn</a>
           </td>
         </tr>
       {{else}}
         <tr>
           <td colspan='5' class='text-center'>
-            Bạn chưa đăng khoá học nào.
-            <a href='/courses/create'>Đăng khoá học</a>
+            Thùng rác trống
           </td>
         </tr>
       {{/each}}
@@ -71,7 +70,7 @@
         </button>
       </div>
       <div class='modal-body'>
-        Bạn có chắc muốn xoá khoá học này không
+        Bạn có chắc muốn xoá vĩnh viễn khoá học này không
       </div>
       <div class='modal-footer'>
         <button
@@ -86,16 +85,22 @@
   </div>
 </div>
 
-{{! DELETE HIDEN FORM }}
 <form name='delete-course-form' method='post' action=''>
+</form>
+
+<form name='restore-course-form' method='post' action=''>
 </form>
 
 <script>
   document.addEventListener('DOMContentLoaded',function() { let courseID; const
-  deleteForm = document.forms['delete-course-form'];
-  $('#delete-course-modal').on('show.bs.modal', function (event) { const button
-  = $(event.relatedTarget); const id = button.data('id'); courseID = id });
-  const btnDeleteCourse = document.getElementById('btn-delete-course')
-  btnDeleteCourse.onclick = function () { deleteForm.action =
-  `/courses/${courseID}?_method=DELETE`; deleteForm.submit(); } } )
+  deleteForm = document.forms['delete-course-form']; const restoreForm =
+  document.forms['restore-course-form']; const btnDeleteCourse =
+  document.getElementById('btn-delete-course'); const btnRestore =
+  $('.btn-restore'); $('#delete-course-modal').on('show.bs.modal', function
+  (event) { const button = $(event.relatedTarget); const id = button.data('id');
+  courseID = id; }); btnDeleteCourse.onclick = function () { deleteForm.action =
+  `/courses/${courseID}/force?_method=DELETE`; deleteForm.submit(); }
+  btnRestore.click(function(e){ e.preventDefault(); const id =
+  $(this).data('id'); restoreForm.action =
+  `/courses/${id}/restore?_method=PATCH`; restoreForm.submit(); }) } )
 </script>
